styleWelcomePage.css
* {
  margin: 0;
  padding: 0;
}
html,
body {
  height: 100%;
}
body,
.homepage {
  background: rgb(220, 228, 227, 0.3) url(/images/bethany-legg-mobile-alt2.jpg)
    no-repeat;
  height: 100%;
  background-position: center;
}
.main-area {
  display: grid;
  grid-template-rows: 110px 1fr 50px 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  height: 100%;
}

.upper-area {
  grid-area: 2/1/3/4;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  padding: 5%;
}

.upper-area h1 {
  margin-top: 90px;
  padding: 20px;
  font-size: 300%;
  text-align: center;
  text-shadow: #386369 1px 1px 1px;
}

.upper-area p {
  text-align: center;
}

.divder-area {
  grid-area: 3/1/4/4;
  display: flex;
  height: 30px;
}

.middle-area {
  grid-area: 4/1/5/4;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/*bara för att fylla ut*/
.lower-area {
  grid-area: 5/1/6/4;
  display: flex;
  height: 300px;
}

.box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  background-color: rgba(230, 237, 237, 0.8);
  margin-left: 20px;
  margin-right: 20px;
  margin-bottom: 30px;
  border: #386369 2px solid;
  border-radius: 5px;
  padding: 2%;
  text-align: center;
}
.box button {
  margin-bottom: 10px;
  border: #386369 2px solid;
}
.box .fa {
  color: #152d30;
  font-size: 40px;
  width: 20;
  padding: 10px;
}

.box .box-title {
  font-size: 20px;
  padding: 10px;
}

@media (min-width: 600px) {
  body,
  .homepage {
    background: url(/images/bethany-legg-75nbwHfDsnY-unsplash.jpg) no-repeat;
    background-size: cover;
  }
  .upper-area {
  }

  .upper-area h1 {
  }

  .upper-area p {
  }

  .divder-area {
  }

  .middle-area {
    flex-direction: row;
    align-items: flex-start;
  }

  .lower-area {
  }

  .box {
    margin-left: 20px;
    margin-right: 20px;
    background-color: rgba(230, 237, 237, 0.5);
  }
}

